--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <img class="header_logo" src="images/download.png">
+                <img class="header_logo" src="/download.png">
                 <small class="logo_support">Account</small>
                 <div class="header_nav">
                    <a href="#">Overview</a>
