--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p>Sign in to your Google Account, and get the most out of all the Google services you use. Your account helps you do more by personalizing your Google experience and offering easy access to your most important information from anywhere.</p>
                 </div>
                 <div class="title_two">
-                    <video src="images/header_animation_updated.mp4" autoplay loop></video>
+                    <video src="/header_animation_updated.mp4" autoplay loop></video>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
     <section class="features">
         <div class="container">
             <div class="features_img">
-              <img  src="images/unnamed.png">
+              <img  src="/unnamed.png">
             </div>
         </div>
         <div class="features_content">
@@ -88,14 +88,14 @@
                 <p>Your Google Account helps you save time by automatically filling in passwords, addresses, and payment details using the information you’ve saved to your account.</p>
             </div>
             <div class="features_video">
-                <video src="images/helpful_autofill_one.mp4" autoplay loop></video>
+                <video src="/helpful_autofill_one.mp4" autoplay loop></video>
             </div>
         </div>
     </section>
     <section class="features">
         <div class="container">
             <div class="features_img">
-              <img  src="images/unnamed (1).png">
+              <img  src="/unnamed (1).png">
             </div>
         </div>
         <div class="features_content">
@@ -118,14 +118,14 @@
                 <p>You’re never more than a tap away from your data and settings. Just tap your profile picture and follow the link to “Manage your Google Account”. From your profile picture, you can also easily sign in, sign out, or turn on Incognito mode</p>
             </div>
             <div class="features_video">
-                <video src="images/feature_one_click_access_updated.mp4" autoplay loop></video>
+                <video src="/feature_one_click_access_updated.mp4" autoplay loop></video>
             </div>
         </div>
     </section>
     <section class="features">
         <div class="container">
             <div class="features_img">
-              <img  src="images/unnamed (2).png">
+              <img  src="/unnamed (2).png">
             </div>
         </div>
         <div class="features_content">
@@ -148,7 +148,7 @@
                 <p>Your Google Account automatically protects your personal information and keeps it private and safe. Every account comes with powerful features like spam filters that block 99.9% of dangerous emails before they ever reach you, and personalized security notifications that alert you of suspicious activity and malicious websites.</p>
             </div>
             <div class="features_video">
-                <video src="images/secure_built_in_security_first.mp4" autoplay loop></video>
+                <video src="/secure_built_in_security_first.mp4" autoplay loop></video>
             </div>
         </div>
     </section>
